--- a/bowling/bowling_site/templates/bowling_site/BowlersBliss.html
+++ b/bowling/bowling_site/templates/bowling_site/BowlersBliss.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-    {% load static %}
+<html>
+{% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'BowlersBlissCSS.css' %}">
 <title>Bowlers Bliss</title>
 
@@ -14,12 +14,12 @@
 
     <nav>
         <ul>
-            <li><a href="BowlersBliss.html">Home</a></li>
+            <li><a href="/home">Home</a></li>
             <li><a>Bowlers</a></li>
             <li><a>Alleys</a></li>
             <li><a>Gear</a></li>
-            <li><a href="About.html">About Us</a></li>
-            <li><a href="Contact.html">Contact Us</a></li>
+            <li><a href="/about">About Us</a></li>
+            <li><a href="/contact">Contact Us</a></li>
         </ul>
     </nav>
     <br>
@@ -29,7 +29,7 @@
 
     <section>
         <article id="ar1">
-            <h4 style="text-align: center"><a href="BowlersBlissRegistration.html">Register</a> | <a href="Login.html">Login</a></h4>
+            <h4 style="text-align: center"><a href="/reg">Register</a> | <a href="/log">Login</a></h4>
             <h3 id="h31">Find Members</h3>
             <ul>
 
@@ -47,10 +47,10 @@
         </article>
         <article id="ar3">
             <h4>News & Events</h4>
-            <p style="text-decoration: underline"><a href="WIP.html">Westgate Lanes bowler rolls first second and third 300 for perfect 900 series</a></p>
-            <p style="text-decoration: underline"><a href="WIP.html">Standings from recent Open Tournament</a></p>
-            <p style="text-decoration: underline"><a href="WIP.html">Latest NEBA Tournament Recap</a></p>
-            <p style="text-decoration: underline"><a href="WIP.html">Collegiate Ticker</a></p>
+            <p style="text-decoration: underline"><a href="/wip">Westgate Lanes bowler rolls first second and third 300 for perfect 900 series</a></p>
+            <p style="text-decoration: underline"><a href="/wip">Standings from recent Open Tournament</a></p>
+            <p style="text-decoration: underline"><a href="/wip">Latest NEBA Tournament Recap</a></p>
+            <p style="text-decoration: underline"><a href="/wip">Collegiate Ticker</a></p>
 
         </article>
     </section>
@@ -103,7 +103,7 @@
         <br>
 
         <li id="link2">
-            <a href="WIP.html">Site Map</a> | <a href="WIP.html">Terms & Conditions</a> | <a href="WIP.html">Privacy Policy</a> | <a href="About.html">About Us</a></li>
+            <a href="/wip">Site Map</a> | <a href="/wip">Terms & Conditions</a> | <a href="/wip">Privacy Policy</a> | <a href="/about">About Us</a></li>
     </div>
 
     <div id="divC">
