solarpv stylesheet and link corrections

--- a/solarpv/solarpvsite/templates/solarpvsite/SolarPV.html
+++ b/solarpv/solarpvsite/templates/solarpvsite/SolarPV.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <h4 style="float: right"><a href="WIP.html">About Us</a> <a href="WIP.html">Contact Us</a></h4>
+        <h4 style="float: right"><a href="/wip">About Us</a> <a href="/wip">Contact Us</a></h4>
         <h1>
             solarPV
 
@@ -34,8 +34,8 @@
             <li id="li1"><a>PV Systems</a></li>
             <li id="li1"><a>PV Module</a></li>
             <li id="li1"><a>Racks & Trackers</a></li>
-            <li id="li2"><a href="SolarPV.html">Home</a></li>
-            <li id="li2"><a href="SolarPVWebPortal.html">Web Portal</a></li>
+            <li id="li2"><a href="/home">Home</a></li>
+            <li id="li2"><a href="/wp">Web Portal</a></li>
         </ul>
     </nav>
 
@@ -43,7 +43,7 @@
 
     <section>
         <article style="width: 30%; height: 70%">
-            <h4 style="text-align: center"><a href="SolarPVRegister.html">Register</a> | <a href="SolarPVLogin.html">Login</a></h4>
+            <h4 style="text-align: center"><a href="/reg">Register</a> | <a href="/login">Login</a></h4>
             <h3 id="h31">PV Module</h3>
             <ul>
                 <li>Testing & Certification</li>
@@ -85,10 +85,10 @@
         </article>
         <article style="width: 20%; height: 70%; text-align: center">
             <h4>News & Events</h4>
-            <p style="text-decoration: underline"><a href="WIP.html">PhotoVoltaic Technical Conference to take place in Marseille, France from 26 to 28 April 2017</a></p>
-            <p style="text-decoration: underline"><a href="WIP.html">Trump is next US president</a></p>
-            <p style="text-decoration: underline"><a href="WIP.html">Syrian forces recapture Aleppo</a></p>
-            <p style="text-decoration: underline"><a href="WIP.html">Senate votes on SCOTUS nominee</a></p>
+            <p style="text-decoration: underline"><a href="/wip">PhotoVoltaic Technical Conference to take place in Marseille, France from 26 to 28 April 2017</a></p>
+            <p style="text-decoration: underline"><a href="/wip">Trump is next US president</a></p>
+            <p style="text-decoration: underline"><a href="/wip">Syrian forces recapture Aleppo</a></p>
+            <p style="text-decoration: underline"><a href="/wip">Senate votes on SCOTUS nominee</a></p>
 
         </article>
     </section>
@@ -117,7 +117,7 @@
             <br> Address, Phone, Email, Website
 
             <li id="link2">
-                <a href="WIP.html">Site Map</a> | <a href="WIP.html">Terms & Conditions</a> | <a href="WIP.html">Privacy Policy</a> | <a href="WIP.html">About Us</a></li>
+                <a href="/wip">Site Map</a> | <a href="/wip">Terms & Conditions</a> | <a href="/wip">Privacy Policy</a> | <a href="/wip">About Us</a></li>
         </div>
 
         <div id=div2>
