--- a/solarpv/solarpvsite/templates/solarpvsite/SolarPVRegister.html
+++ b/solarpv/solarpvsite/templates/solarpvsite/SolarPVRegister.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="SolarPVRegistration_Style.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'SolarPVRegistration_Style.css' %}">
     <title>solarPV</title>
     <style>
         body {
@@ -14,7 +15,7 @@
 
 <body>
     <header style="border: 1px solid black">
-        <h4 style="float: right"><a href="WIP.html">About Us</a> <a href="WIP.html">Contact Us</a></h4>
+        <h4 style="float: right"><a href="/wip">About Us</a> <a href="/wip">Contact Us</a></h4>
         <h1>
             solarPV
 
@@ -32,8 +33,8 @@
             <li id="li1"><a>PV Systems</a></li>
             <li id="li1"><a>PV Module</a></li>
             <li id="li1"><a>Racks & Trackers</a></li>
-            <li id="li2"><a href="SolarPV.html">Home</a></li>
-            <li id="li2"><a href="SolarPVWebPortal.html">Web Portal</a></li>
+            <li id="li2"><a href="/home">Home</a></li>
+            <li id="li2"><a href="/wp">Web Portal</a></li>
         </ul>
     </nav>
 
@@ -94,7 +95,7 @@
             <br> Address, Phone, Email, Website
 
             <li id="link2">
-                <a href="WIP.html">Site Map</a> | <a href="WIP.html">Terms & Conditions</a> | <a href="WIP.html">Privacy Policy</a> | <a href="WIP.html">About Us</a></li>
+                <a href="/wip">Site Map</a> | <a href="/wip">Terms & Conditions</a> | <a href="/wip">Privacy Policy</a> | <a href="/wip">About Us</a></li>
         </div>
 
         <div id=div2>
