--- a/solarpv/solarpvsite/templates/solarpvsite/SolarPVWebPortal.html
+++ b/solarpv/solarpvsite/templates/solarpvsite/SolarPVWebPortal.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="SolarPVWP_Style.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'SolarPVWP_Style.css' %}">
 
     <title>webportal</title>
     <style>
@@ -11,7 +12,7 @@
 </head>
 <body>
     <header style="border: 1px solid black">
-        <h4 style="float: right"><a href="WIP.html">About Us</a> <a href="WIP.html">Contact Us</a></h4>
+        <h4 style="float: right"><a href="/wip">About Us</a> <a href="/wip">Contact Us</a></h4>
         <h1>
             solarPV
         </h1>
@@ -27,8 +28,8 @@
             <li id="li1"><a>PV Systems</a></li>
             <li id="li1"><a>PV Module</a></li>
             <li id="li1"><a>Racks & Trackers</a></li>
-            <li id="li2"><a href="SolarPV.html">Home</a></li>
-            <li id="li2"><a href="SolarPVWebPortal.html">Web Portal</a></li>
+            <li id="li2"><a href="/home">Home</a></li>
+            <li id="li2"><a href="/wp">Web Portal</a></li>
         </ul>
     </nav>
 
@@ -155,7 +156,7 @@
             <br> Address, Phone, Email, Website
 
             <li id="link2">
-                <a href="WIP.html">Site Map</a> | <a href="WIP.html">Terms & Conditions</a> | <a href="WIP.html">Privacy Policy</a> | <a href="WIP.html">About Us</a></li>
+                <a href="/wip">Site Map</a> | <a href="/wip">Terms & Conditions</a> | <a href="/wip">Privacy Policy</a> | <a href="/wip">About Us</a></li>
         </div>
 
         <div id=div2>
