--- a/solarpv_app/templates/SolarPV.html
+++ b/solarpv_app/templates/SolarPV.html
@@ -34,7 +34,7 @@
             <li id="li1"><a>PV Systems</a></li>
             <li id="li1"><a>PV Module</a></li>
             <li id="li1"><a>Racks & Trackers</a></li>
-            <li id="li2"><a href="/home">Home</a></li>
+            <li id="li2"><a href="/">Home</a></li>
             <li id="li2"><a href="/wp">Web Portal</a></li>
         </ul>
     </nav>
